--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Donezo | Your task planner</title>
   </head>
-  <body>
-    <div id="root"></div>
+  <body class="bg-[#fffbf6] sm:bg-white">
+    <div  id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
